--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "just4fun",
   "version": "0.1.0",
+  "homepage": "kath3rine.github.io/just4fun",
   "private": true,
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
@@ -16,7 +17,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
